--- a/build
+++ b/build
@@ -3,4 +3,4 @@ rm betterlookinggarbs/betterlookinggarbsextra.zip
 zip -rPhr37yw3tre4gg84y betterlookinggarbs/betterlookinggarbsextra.zip dlc*/gfx/*
 zip -r betterlookinggarbs/betterlookinggarbsextra.zip dlc*/interface/*
 ./betterlookinggarbsinstall.sh '/home/maarten/Crusader Kings II'
-#rm ../betterlookinggarbs.mod
+rm -r ../blgsubmods ../submods ../betterlookinggarbs/betterlookinggarbsextra.zip
